samples/_failures_safe/1761202567_6ba0d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ec97602.c: In function ‘main’:
./samples/SAFE/__tmp_4ec97602.c:148:5: error: expected declaration or statement at end of input
  148 |     dijkstra(graph, n, src, dist);
      |     ^~~~~~~~
